fix overflow on post content

--- a/src/main/webapp/css/pomf/post.css
+++ b/src/main/webapp/css/pomf/post.css
@@ -27,8 +27,7 @@
 	padding: 3px;
     width: 222px;
     height: 200px;
-    vertical-align: middle;
-    overflow:auto; }
+    vertical-align: middle;}
 	
 .post .footer{
 	position: relative;
